// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - dropdown renders correctly 1`] = `
<jest>
  <div
    class="dropdown"
  >
    <button
      class="btn btn-primary btn-md"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu"
    >
      <li>
        <a
          href="/example.html"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with alignment end 1`] = `
<jest>
  <div
    class="dropdown"
  >
    <button
      class="btn btn-primary btn-md"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu dropdown-menu-sm-end"
    >
      <li>
        <a
          href="/example.html"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with dark mode 1`] = `
<jest>
  <div
    class="dropdown"
  >
    <button
      class="btn btn-primary btn-md"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu dropdown-menu-dark"
    >
      <li>
        <a
          href="/example.html"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with direction dropup 1`] = `
<jest>
  <div
    class="dropdown dropup"
  >
    <button
      class="btn btn-primary btn-md"
      type="button"
    >
      Dropdown Toggle
    </button>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu"
    >
      <li>
        <a
          href="/example.html"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly with trigger link 1`] = `
<jest>
  <div
    class="dropdown"
  >
    <a
      href="/example.html"
    >
      Dropdown Toggle
    </a>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu"
    >
      <li>
        <a
          href="/example.html"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - dropdown renders correctly without wrapper 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Dropdown Toggle
  </button>
  <ul
    aria-labelledby="dropdown-1"
    class="dropdown-menu"
  >
    <li>
      <a
        href="/example.html"
      >
        I'm a link
      </a>
    </li>
    <li>
      <button
        type="button"
      >
        I'm a button
      </button>
    </li>
    <li>
      <hr
        class="dropdown-divider"
      />
    </li>
    <li>
      <button
        aria-disabled="true"
        disabled="true"
        type="button"
      >
        I'm a disabled button
      </button>
    </li>
    <li>
      <button
        type="button"
      >
        I'm a active button
      </button>
    </li>
  </ul>
</jest>
`;
